Support weird AAC metadata
This file has metadata at the beginning and we don't display it
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Jean-Baptiste Kempf changed the description
changed the description
- Developer
Taglib meta reader exiting empty()
Looks like taglib doesn't support .aac files
- Developer
Does not but the mono C-sharp does. Trying to figure how everything works, as adding a FileTypeResolver for .aac isn't enough. (We should be able to just parse ID3, but it does not seem designed like this)
- Developer
I can force taglib to parse aac files, but the issue is now it takes forever to ByteArray.decode() the 50MB picture.
*** Tag information for /tmp/DJB.aac === TPE1 (Lead performer(s)/Soloist(s)): DJ B === TIT2 (Title/songname/content description): Digitally Imported's 16th Anniversary Progressive Special (2015) === TCON (Content type): (52) === APIC (Attached picture): (Conver Art)[, 3]: image/jpeg, 50462708 bytes
- Developer
decoding caused by unsynchronization bit, which is supposed to be only used by mpeg files
- Developer
Synch decoding is broken. I can patch to enable tags on AAC, but that will be worse with the current file as it will freeze VLC. https://github.com/taglib/taglib/issues/718
- Developer
Should be fixed with taglib trunk, or next stable release
- Author Owner
Thanks for the work.
- Jean-Baptiste Kempf added Component::Build system: Contribs Status::not VLC labels and removed Component::Demuxers label
added Component::Build system: Contribs Status::not VLC labels and removed Component::Demuxers label
- Jean-Baptiste Kempf closed
closed
Replying to [ticket:16623 jb]:
This file has metadata at the beginning and we don't display it
Do you know how the file was created? The APIC tag contains a slightly broken copy of the audio stream. Is it likely that more such files appear?