meta_reader: taglib: parse ID3 tags on aac files

refs #16623